add metacritic games

--- a/src/main/resources/templates/fragments/plat_game_urls.html
+++ b/src/main/resources/templates/fragments/plat_game_urls.html
@@ -22,6 +22,9 @@
                        placeholder="HLTB Url" id="hltb" name="hltb" th:value="${hltb}" />
 
                 <input type="text" class="field-style field-full align-left"
+                       placeholder="MetaCritic Url" id="metaurl" name="metaurl" th:value="${metaurl}" />
+
+                <input type="text" class="field-style field-full align-left"
                        placeholder="PSN ID" id="psnid" name="psnid" th:value="${psnid}" />
             </li>
             <li>
