--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -34,6 +34,9 @@
                     <a class="nav-link" th:href="@{/platgames/add/}">AddPlat</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" th:href="@{/platgames/agg_add/}">AggAdd</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" th:href="@{/platgames/wishlist/}">WishList</a>
                 </li>
                 <li class="nav-item">
