--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -42,6 +42,12 @@
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/library/}">Library</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/salegames/}">SaleGames</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/saledlc/}">SaleDLC</a>
+                </li>
             </ul>
         </div>
 
