--- a/src/main/resources/templates/sale_dlc/sale_dlc.html
+++ b/src/main/resources/templates/sale_dlc/sale_dlc.html
@@ -11,7 +11,7 @@
     <div th:replace="fragments/navbar::navbar"></div>
 
     <div class="container">
-        <form th:action="@{/salegames/}" method="get">
+        <form th:action="@{/saledlc/}" method="get">
             <div class="row d-flex justify-content-center align-items-center">
                 <div class="col-md-6">
                     <div class="search">
