--- a/src/main/resources/templates/fragments/sale_sorts.html
+++ b/src/main/resources/templates/fragments/sale_sorts.html
@@ -12,19 +12,35 @@
                 <button type="button" class="btn btn-primary sort-button">Price</button>
             </a>
 
+            <a th:href="@{${url.replaceQueryParam('sort').replaceQueryParam('page').toUriString()}(sort=${'pp'}, page=${0})}">
+                <button type="button" class="btn btn-warning sort-button">PlusPrice</button>
+            </a>
+
             <a th:href="@{${url.replaceQueryParam('sort').replaceQueryParam('page').toUriString()}(sort=${'dis'}, page=${0})}">
-                <button type="button" class="btn btn-danger sort-button">Discount</button>
+                <button type="button" class="btn btn-success sort-button">Discount</button>
             </a>
 
-            <a th:if="${type == null || type.equals('game')}"
-               th:href="@{${url.replaceQueryParam('sort').replaceQueryParam('page').toUriString()}(sort=${'pgfp'}, page=${0})}">
-                <button type="button" class="btn btn-success sort-button">PGPrice</button>
+            <a th:href="@{${url.replaceQueryParam('sort').replaceQueryParam('page').toUriString()}(sort=${'plusdis'}, page=${0})}">
+                <button type="button" class="btn btn-info sort-button">PlusDiscount</button>
             </a>
 
-            <a th:if="${type == null || type.equals('game')}"
-               th:href="@{${url.replaceQueryParam('sort').replaceQueryParam('page').toUriString()}(sort=${'pgdis'}, page=${0})}">
-                <button type="button" class="btn btn-info sort-button">PGDiscount</button>
-            </a>
+            <div style="display: inline" th:if="${type == null || type.equals('game')}">
+                <a th:href="@{${url.replaceQueryParam('sort').replaceQueryParam('page').toUriString()}(sort=${'pgfp'}, page=${0})}">
+                    <button type="button" class="btn btn-primary sort-button">PGPrice</button>
+                </a>
+
+                <a th:href="@{${url.replaceQueryParam('sort').replaceQueryParam('page').toUriString()}(sort=${'pgpp'}, page=${0})}">
+                    <button type="button" class="btn btn-warning sort-button">PGPlusPrice</button>
+                </a>
+
+                <a th:href="@{${url.replaceQueryParam('sort').replaceQueryParam('page').toUriString()}(sort=${'pgdis'}, page=${0})}">
+                    <button type="button" class="btn btn-success sort-button">PGDiscount</button>
+                </a>
+
+                <a th:href="@{${url.replaceQueryParam('sort').replaceQueryParam('page').toUriString()}(sort=${'pgplusdis'}, page=${0})}">
+                    <button type="button" class="btn btn-info sort-button">PGPlusDiscount</button>
+                </a>
+            </div>
         </div>
     </div>
 
