--- a/src/main/resources/templates/sale_dlc/sale_dlc.html
+++ b/src/main/resources/templates/sale_dlc/sale_dlc.html
@@ -48,7 +48,11 @@
                 <div th:text="${game.getPriceSummary()}"></div>
                 <div>
                     <span>Discount: </span>
-                    <span th:text="${game.getDiscountText()}"></span>
+                    <span style="font-weight: bold; color: #0ba691" th:text="${game.getDiscountText()}"></span>
+                    <div style="display: inline" th:if="${game.salePriceValue > game.plusPriceValue}">
+                        <span> | </span>
+                        <span style="font-weight: bold; color: #a98c00" th:text="${game.getPlusDiscountText()}"></span>
+                    </div>
                 </div>
             </div>
         </div>
