some bugfix and improves and add ability to exclude lib games in platgames

--- a/src/main/resources/templates/plat_games/plat_games.html
+++ b/src/main/resources/templates/plat_games/plat_games.html
@@ -26,6 +26,10 @@
         </form>
     </div>
 
+    <div style="margin-top: 16px;">
+        <div th:replace="fragments/libincluded::libinc"></div>
+    </div>
+
     <div th:if="${type.equals('plats')}" th:replace="fragments/sorts::sort_options"
          style="margin-top: 16px;"></div>
 
