--- a/src/main/resources/templates/plat_games/plat_games.html
+++ b/src/main/resources/templates/plat_games/plat_games.html
@@ -26,7 +26,7 @@
         </form>
     </div>
 
-    <div style="margin-top: 16px;">
+    <div th:if="${type.equals('plats')}" style="margin-top: 16px;">
         <div th:replace="fragments/libincluded::libinc"></div>
     </div>
 
@@ -50,6 +50,10 @@
             </div>
             <div class="text-container">
                 <div th:each="item: ${game.getShortSummary()}" th:text="${item}"></div>
+
+                <div th:if="${type.equals('plats')}" style="margin-top: 6px;">
+                    <div th:replace="fragments/sources_links::links"></div>
+                </div>
             </div>
         </div>
     </div>
