--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -39,8 +39,15 @@
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/platgames/wishlist/}">WishList</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/library/}">Library</a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Library
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" th:href="@{/library/}">Games</a>
+                        <a class="dropdown-item" th:href="@{/library/bestgames/}">Ranking</a>
+                        <a class="dropdown-item" th:href="@{/library/bestgames_ranking/}">Spread Ranking</a>
+                    </div>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/salegames/}">SaleGames</a>
