--- a/src/main/resources/templates/plat_games/plat_games.html
+++ b/src/main/resources/templates/plat_games/plat_games.html
@@ -37,7 +37,7 @@
         <div th:replace="fragments/pagination::pagination"></div>
     </div>
 
-    <div class="container" style="margin-bottom: 32px;">
+    <div class="container" style="margin-bottom: 32px; margin-left: 60px; margin-right: 60px;">
         <div class="a-box" th:each="game : ${records}">
             <div class="img-container">
                 <div class="img-inner">
